--- a/TP2/docker-compose.yml
+++ b/TP2/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     environment:
       - REACT_APP_ENV=qa
       - REACT_APP_API_URL=http://localhost:8081
+    volumes:
+      - ./frontend/default.conf.qa:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - backend-qa
     networks:
@@ -53,7 +55,7 @@ services:
       - .env.qa
     volumes:
       - mysql_data_qa:/var/lib/mysql
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
+      - ./init-db-qa.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
     networks:
       - qa-network
     restart: unless-stopped
@@ -101,6 +103,8 @@ services:
     environment:
       - REACT_APP_ENV=production
       - REACT_APP_API_URL=http://localhost:8082
+    volumes:
+      - ./frontend/default.conf.prod:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - backend-prod
     networks:
@@ -127,7 +131,7 @@ services:
       - .env.prod
     volumes:
       - mysql_data_prod:/var/lib/mysql
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
+      - ./init-db-prod.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
     networks:
       - prod-network
     restart: unless-stopped
