--- a/TP2/package.json
+++ b/TP2/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "date-fns": "^3.6.0"
+    "@types/react": "^19.1.13",
+    "date-fns": "^3.6.0",
+    "react": "^19.1.1"
   }
 }
